assets/src/blocks/amp-story-page/edit.css
.block-editor-block-list__layout .block-editor-block-list__block[data-type="amp/amp-story-page"] > .block-editor-block-list__block-edit > .block-editor-block-list__breadcrumb {
	display: none;
}

.block-editor-block-list__layout .block-editor-block-list__block[data-type="amp/amp-story-page"] > .block-editor-block-list__block-edit:before {
	border: 3px solid #E3E5E7;
	border-radius: 5px;
	box-shadow: none;
}

.block-editor-block-list__layout .block-editor-block-list__block.amp-page-active[data-type="amp/amp-story-page"] > .block-editor-block-list__block-edit:before {
	border-color: #555d66;
}

.block-editor-block-list__layout .block-editor-block-list__block .block-editor-block-list__block-edit:before {
	left: -3px;
	top: -3px;
	right: -3px;
	bottom: -3px;
}

.block-editor-block-list__layout .block-editor-block-list__block[data-type="amp/amp-story-page"] > .block-editor-block-list__block-edit > .block-editor-block-contextual-toolbar > .block-editor-block-toolbar {
	left: 18px;
	top: 11px;
}

/*
 * Disable the block mover at all times for page blocks.
 */

[data-type="amp/amp-story-page"] > .editor-block-list__block-edit > .editor-block-mover {
	display: none !important;
}

/*
 * Fix the page editor size to the ratio of the stories.
 */

.editor-block-list__layout div[data-type="amp/amp-story-page"] {
	padding: 0;
	margin: 60px 30px 0;
}

@media (min-width: 600px) {
	div[data-type="amp/amp-story-page"] .editor-block-list__block {
		margin: 0;
		padding: 0;
	}
}

#amp-story-editor .wp-block[data-type="amp/amp-story-page"],
#amp-story-editor .wp-block[data-type="amp/amp-story-page"] .editor-inner-blocks .editor-block-list__layout:first-of-type {
	width: 100%;
	max-width: 338px;
	height: 553px;
	position: relative;
}

#amp-story-editor .wp-block[data-type="amp/amp-story-page"] .editor-block-list__layout > .block-list-appender {
	width: 316px;
	margin: 0 auto;
	display: none;
}

.editor-block-list__layout div[data-type="amp/amp-story-page"].editor-block-list__block .editor-block-list__block-edit,
.editor-block-list__layout .editor-block-list__layout .editor-block-list__block .editor-block-list__block-edit {
	margin: 0;
}

.editor-block-list__layout div[data-type="amp/amp-story-page"] {
	flex: 0 0 auto;
	position: relative;
	transition: border 300ms linear;
}

.editor-block-list__layout div[data-type="amp/amp-story-page"] + div[data-type="amp/amp-story-page"] {
	margin-left: 20px;
}

.editor-block-list__layout [data-type="amp/amp-story-page"].amp-page-active {
	border-color: #ccc;
}

.editor-block-list__layout [data-type="amp/amp-story-page"].amp-page-active::after {
	background-color: #ccc;
}

.editor-block-list__layout [data-type="amp/amp-story-page"].amp-page-inactive {
	opacity: .5;
}

.editor-block-list__layout [data-type="amp/amp-story-page"].amp-page-inactive > div {
	pointer-events: none;
}

.editor-block-list__layout div[data-type="amp/amp-story-page"] .amp-story-page-number {
	position: absolute;
	top: -3em;
	text-transform: uppercase;
	font-weight: 500;
	font-size: 12px;
	color: #666;
	letter-spacing: 1px;
}

.editor-block-list__layout div[data-type="amp/amp-story-page"] .amp-story-page-number + div {
	height: 543px;
}

/*
 * Make all the inner blocks positioned with absolute.
 */
div[data-type="amp/amp-story-page"] .editor-inner-blocks .editor-block-list__layout:first-of-type .wp-block {
	position: absolute;
	z-index: 10;
}

.editor-block-list__block .editor-block-list__layout {
	margin: 0;
}

.editor-block-list__layout div[data-type="amp/amp-story-page"][data-amp-selected="parent"] .editor-block-drop-zone {
	height: 583px;
	width: 438px;
	margin: 0;
	left: -100px;
	top: -50px;
	border: none;
	background: transparent;
}

.editor-block-list__layout div[data-type="amp/amp-story-page"][data-amp-selected="parent"] > .editor-block-drop-zone .components-drop-zone__content {
	display: none;
}

div[data-type="amp/amp-story-page"] .wp-block-image {
	margin-top: 0;
}

/*
 * Hackily hide the alignment options from the image block since they are irrelevant for an image block in a story.
 * In the future the underlying alignment buttons should be removed entirely. See <https://github.com/ampproject/amp-wp/issues/2115>.
 */
.editor-block-list__block[data-type="core/image"] > div.editor-block-list__block-edit.block-editor-block-list__block-edit > div.editor-block-contextual-toolbar.block-editor-block-contextual-toolbar > div.editor-block-toolbar.block-editor-block-toolbar > div:nth-child(2),
.editor-block-list__block[data-type="core/pullquote"] > div.editor-block-list__block-edit.block-editor-block-list__block-edit > div.editor-block-contextual-toolbar.block-editor-block-contextual-toolbar > div.editor-block-toolbar.block-editor-block-toolbar > div:nth-child(2),
.editor-block-list__block[data-type="core/embed"] > div.editor-block-list__block-edit.block-editor-block-list__block-edit > div.editor-block-contextual-toolbar.block-editor-block-contextual-toolbar > div.editor-block-toolbar.block-editor-block-toolbar > div:nth-child(2),
.editor-block-list__block[data-type="core/video"] > div.editor-block-list__block-edit.block-editor-block-list__block-edit > div.editor-block-contextual-toolbar.block-editor-block-contextual-toolbar > div.editor-block-toolbar.block-editor-block-toolbar > div:nth-child(2) {
	display: none;
}

#amp-story-editor .components-draggable__clone {
	position: absolute;
}

/* Hide inserter within inactive pages */
.amp-page-inactive[data-type="amp/amp-story-page"] .block-list-appender {
	display: none;
}

/* Pullquote block adjustments */
.wp-block[data-type="core/pullquote"][data-align="wide"],
.wp-block[data-type="core/pullquote"][data-align="full"] {
	width: 100%;
	max-width: 100%;
}
.block-editor-inner-blocks .wp-block[data-type="core/pullquote"] .block-editor-block-list__block-edit {
	display: block;
}

#amp-story-editor .block-editor-block-list__layout .block-editor-block-list__block[data-align="full"] {
	margin: 0;
}

/* Background Media */

.editor-amp-story-page-video-wrap {
	position: absolute;
	overflow: hidden;
	width: 100%;
	height: 100%;
}

.editor-amp-story-page-video {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	min-width: 100%;
	min-height: 100%;
	object-fit: cover;
}

#editor-amp-story-page-poster__help {
	margin-top: 0;
}

.editor-amp-story-page-background {
	display: block;
}

.editor-amp-story-page-background + .is-destructive {
	margin-top: 1em;
}

